# general-i-a

./: CLAUDE.md  README.md  grid_search.sh  pyproject.toml  pyproject.toml  # Update dev dependencies section  qagent_generala_ep50000_bs64_g0.94_lr0.0004_eps1.0-0.05-0.9995_mem10000_tu10_tau0.005_hl256-256-128_g0.94_lr0.0004_hl256x256x128.pth  qagent_generala_ep50000_bs64_g0.94_lr0.0006_eps1.0-0.05-0.9995_mem10000_tu10_tau0.005_hl256-256-128_g0.94_lr0.0006_hl256x256x128.pth  qagent_generala_ep50000_bs64_g0.96_lr0.0004_eps1.0-0.05-0.9995_mem10000_tu10_tau0.005_hl256-256-128_g0.96_lr0.0004_hl256x256x128.pth  qagent_generala_ep50000_bs64_g0.96_lr0.0006_eps1.0-0.05-0.9995_mem10000_tu10_tau0.005_hl256-256-128_g0.96_lr0.0006_hl256x256x128.pth  tox.ini
notebook/: example.ipynb
src/: agent.py  cli.py  generala.py  train_qagent.py  validation.py
tests/: test_generala.py
