[tool.poetry]
name = "test_copilot_agent"
version = "0.1.0"
description = "A Python project with src and notebook directories."
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
jupyter = "^1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
tox = "^4.25.0"

[tool.mypy]
python_version = 3.9
files = ["src"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"